# r64fx

./: .gitignore  .kateproject  CMakeLists.txt  Doxyfile  README.md  all  build.sh  genmake.sh  init_build.sh  p  r64fx.project
base/: AudioData.cpp  AudioData.h  AudioEngine.cpp  AudioEngine.h  CMakeLists.txt  JackAudioEngine.cpp  JackAudioEngine.h  dsp.h  example.cpp  jit.h
data/icons/: .directory
data/shaders/: Painter.vert  Wire.frag
data/translations/en/: close_view  split_horizontally  split_vertically
data/translations/ru/: .split_vertically.kate-swp  Close  Graph  Open  Redo  Save  Save as  Session  Undo  View  split_horizontally  split_vertically
data/xcf/: knob1.xcf  knob2.xcf  slider1.xcf
dsp/: Graph.cpp  Graph.h  Graph.hpp  Processor.cpp  Processor.h  Processor.hpp  dsp.list  dsp.project  tryprocessor  tryprocessor.cxx
file_dialog_qt/: file_dialog_qt.cpp  file_dialog_qt.pro
gc/: CMakeLists.txt  gc.cpp  gc.h  gc.hpp  gc.list
gui/: Action.cpp  Action.h  ActionWidget.cpp  ActionWidget.h  ActionWidget.hpp  CMakeLists.txt  CallbackList.cpp  CallbackList.h  CallbackList.hpp  Color.h  Config.cpp  Config.h  Dummy.cpp  Dummy.h  Error.cpp  Error.h  Event.h  Font.cpp  Font.frag  Font.h  Font.vert  HorizontalMenu.cpp  HorizontalMenu.h  HoverableWidget.cpp  HoverableWidget.h  Icon.cpp  Icon.h  Icon.hpp  IteratorPair.h  KeyEvent.h  Keyboard.cpp  Keyboard.h  KeyboardShortcut.cpp  KeyboardShortcut.h  KeyboardShortcut.hpp  LinearContainer.cpp  LinearContainer.h  Menu.cpp  Menu.h  Menu.hpp  (+89 more)
gui/sdl2/: Keyboard.h  Window.cpp
jit/: adsr.cxx  example.cpp  imm.h  jit.config_rules  jit.cpp  jit.h  jit.hpp  jit.list  jit.project  kahan.cxx  tryjit.cxx  uselists.cxx
jit/private/: add.h  jmp.hpp  mov.hpp  other.hpp  sse.h  sub.hpp
json/: CMakeLists.txt  Json.cpp  Json.h  json.cpp  json.h
main/: AudioClipWidget.cpp  AudioClipWidget.h  AudioData.cpp  AudioData.h  CMakeLists.txt  DenseWaveformPainter.cpp  DenseWaveformPainter.frag  DenseWaveformPainter.h  DenseWaveformPainter.vert  InformationScene.cpp  InformationScene.h  InformationScene.hpp  Knob.cpp  Knob.h  Knob.hpp  Machine.cpp  Machine.h  MachineScene.cpp  MachineScene.h  MachineWidget.cpp  MachineWidget.h  MasterIOMachine.cpp  MasterIOMachine.h  MonophonicMixer.cpp  MonophonicMixer.h  MonophonicMixer.hpp  Program.cpp  Program.h  Program.hpp  SawtoothOsc.cpp  SawtoothOsc.h  SawtoothOsc.hpp  Slider.cpp  Slider.h  Slider.hpp  Socket.cpp  Socket.h  Socket.hpp  Wire.cpp  Wire.frag  (+19 more)
paths/: CMakeLists.txt  data_paths.cpp  data_paths.h
png/: Image.h  Image.hpp  Pixel.h  png.cpp  png.hpp  try.cxx
serialize/: CMakeLists.txt  serialize.h
shared/: Disposable.cpp  Disposable.hpp  Utf8String.hpp  shared.project
shared_sources/: LinkedItem.h  binary_constants.h  read_png.h
src/: Action.cpp  Action.hpp  AlgebraUtils.hpp  Array.hpp  Atlas.cpp  Atlas.hpp  AudioClipWidget.cpp  AudioClipWidget.hpp  AudioData.cpp  AudioData.hpp  AudioDriver.cpp  AudioDriver.hpp  Beat.hpp  BilinearCopy.cpp  BilinearCopy.hpp  CMakeLists.txt  Callback.hpp  CircularBuffer.hpp  Clipboard.cpp  Clipboard.hpp  ClipboardEvent.cpp  ClipboardEvent.hpp  ClipboardEvents.cpp  ClipboardEvents.hpp  ClipboardMode.hpp  Color.hpp  Complex.hpp  Conf_Scale.cpp  Conf_Scale.hpp  Debug.hpp  DenseWaveformPainter.hpp  Directory.cpp  Directory.hpp  DummyMachine.cpp  DummyMachine.hpp  Engine.cpp  Engine.hpp  Event.hpp  Expression.hpp  FilterClass.cpp  (+456 more)
src/Demo/: DemoSoundEngine.cxx
src/glsl/: blend_color.frag  blend_colors_r.frag  blend_colors_rg.frag  waveform.frag
tools/: Makefile  build_resource.cpp  build_tool.cpp  conftool.cpp  file2numlist.cpp  file2str.cpp  gen_build_rules.sh  gen_resource_rules.sh  makebuff.cpp  makestring.cpp  maketool.cpp  png2numlist.cpp  prepare_shaders.sh  xolonium_font.cpp
utf8string/: CMakeLists.txt  Utf8String.cpp  Utf8String.h  utf8string.project
util/: Arg.cpp  Arg.hpp  Dir.cpp  Dir.hpp
